golyrid-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  selector:
    app: golang-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
