golyrid-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: golang-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: golyrid.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golang-service
            port:
              number: 80
